--- a/v3.3.2/less/navs.less
+++ b/v3.3.2/less/navs.less
@@ -218,14 +218,3 @@
     visibility: visible;
   }
 }
-
-
-// Dropdowns
-// -------------------------
-
-// Specific dropdowns
-.nav-tabs .dropdown-menu {
-  // make dropdown border overlap tab border
-  margin-top: -1px;
-  // Remove the top rounded corners here since there is a hard edge above the menu
-}
